{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 24,
  "lineage": "38f72172-023c-b729-bedf-d6342797ca94",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "silverlord_ni1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/networkInterfaces/silverlord-ni1",
            "internal_domain_name_suffix": "cxpusuqfkylutiwjczncvp1aza.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/publicIPAddresses/silverlord_pubip",
                "subnet_id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/virtualNetworks/silverlord_network/subnets/silverlord_subnet"
              }
            ],
            "location": "eastus",
            "name": "silverlord-ni1",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "silverlord-resource",
            "tags": {
              "environment": "lab"
            }
          },
          "dependencies": [
            "azurerm_public_ip.silverlord_ip1",
            "azurerm_resource_group.silverlord_rg",
            "azurerm_subnet.silverlord_sn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "silverlord_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/networkSecurityGroups/silverord_security_group",
            "location": "eastus",
            "name": "silverord_security_group",
            "resource_group_name": "silverlord-resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "silverlord_labrule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "lab"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.silverlord_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "silverlord_labrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/networkSecurityGroups/silverord_security_group/securityRules/silverlord_labrule",
            "name": "silverlord_labrule",
            "network_security_group_name": "silverord_security_group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "silverlord-resource",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.silverlord_sg",
            "azurerm_resource_group.silverlord_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "silverlord_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/publicIPAddresses/silverlord_pubip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "silverlord_pubip",
            "resource_group_name": "silverlord-resource",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "lab"
            }
          },
          "dependencies": [
            "azurerm_resource_group.silverlord_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "silverlord_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/virtualNetworks/silverlord_network/subnets/silverlord_subnet",
            "name": "silverlord_subnet",
            "resource_group_name": "silverlord-resource",
            "virtual_network_name": "silverlord_network"
          },
          "dependencies": [
            "azurerm_resource_group.silverlord_rg",
            "azurerm_virtual_network.silverlord_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "silverlord-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/virtualNetworks/silverlord_network/subnets/silverlord_subnet",
            "network_security_group_id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/networkSecurityGroups/silverord_security_group",
            "subnet_id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/virtualNetworks/silverlord_network/subnets/silverlord_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.silverlord_sg",
            "azurerm_resource_group.silverlord_rg",
            "azurerm_subnet.silverlord_sn",
            "azurerm_virtual_network.silverlord_vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "silverlord_vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5249df15-5605-4917-a2c9-165a2abf60c8",
            "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/virtualNetworks/silverlord_network",
            "location": "eastus",
            "name": "silverlord_network",
            "resource_group_name": "silverlord-resource",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/virtualNetworks/silverlord_network/subnets/silverlord_subnet",
                "name": "silverlord_subnet",
                "security_group": "/subscriptions/d2b9708a-e954-451b-9588-0a5045afb54b/resourceGroups/silverlord-resource/providers/Microsoft.Network/networkSecurityGroups/silverord_security_group"
              }
            ],
            "tags": {
              "environment": "lab"
            }
          },
          "dependencies": [
            "azurerm_resource_group.silverlord_rg"
          ]
        }
      ]
    }
  ]
}